UI improvements: Add app description, fix title alignment, style search form and icon

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,4 @@
 @import url("https://fonts.cdnfonts.com/css/segoe-ui-4");
-* {
-  font-family: ;
-}
 
 body {
   margin-top: 10px;
